--- a/sass/style.scss
+++ b/sass/style.scss
@@ -535,6 +535,9 @@ figure {
 			span{
 				color: #4100ff;
 			}
+			@media screen and (max-width: $screen-sm) {
+				font-size: 60px;
+			}
 		}
 	}
 }
@@ -562,7 +565,7 @@ body {
 		#dcrab-aside {
 			@include translateX(0);
 			width: 270px;
-			background: $brand-white;
+			background: $brand-darker;
 			z-index: 999;
 			position: fixed;
 		}
@@ -590,31 +593,24 @@ body {
 }
 
 .dcrab-services{
-	.service-box{
+	.horizontal-box{
 		background-color: $brand-darker;
-		padding:15px;
-		border-radius: 3px;
-		-webkit-box-shadow: 0px 35px 78px -23px rgba(0,0,0,0.8);
-		-moz-box-shadow: 0px 35px 78px -23px rgba(0,0,0,0.8);
-		box-shadow: 0px 35px 78px -23px rgba(0,0,0,0.8);
-		image{
-			width: 200px;
-			height: 250px;
+		background-image: url('../images/work-2.jpg');
+		background-repeat: no-repeat;
+		background-position: center bottom;
+		padding: 60px 20%;
+		height: 700px;
+	}
+	.process-bar{
+		height: 8px;
+		background-color: white;
+		.process-value{
+			background: red;
+			height: 100%;
+			width: 50%;
 		}
 	}
-	h2{
-		font-size: 16px;
-		margin-top: 20px;
-		margin-bottom: 0;
-		text-align: center;
-		letter-spacing: 3px;
-		color: $brand-white;
-		text-transform: uppercase;
-	}
-	p{
-		text-align: center;
-		font-weight: 300;
-	}
+
 }
 
 
